<?xml version="1.0"?>
<package format="3">
  <name>slam_integration</name>
  <version>0.0.1</version>
  <description>Launch configuration for SLAM Toolbox using LiDAR</description>

  <maintainer email="jack@example.com">jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
